--- a/app/src/main/res/layout/fragment_plus_one.xml
+++ b/app/src/main/res/layout/fragment_plus_one.xml
@@ -1,10 +1,23 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-   android:background="@android:color/holo_red_dark"
-    >
+    android:background="@android:color/holo_red_dark"
+    android:orientation="vertical">
 
+    <TextView
+        android:id="@+id/tvExtensionFuncitons"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
+    <TextView
+        android:id="@+id/tvIinlineFunctions"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
-</FrameLayout>
+    <ImageView
+        android:id="@+id/scaleadclass"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/common_google_signin_btn_text_dark" />
+
+</LinearLayout>
