--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,16 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:gravity="center_vertical"
-    tools:context="com.example.joaopedrosilva.projectkotlin.MainActivity">
+    android:orientation="vertical"
+    tools:context="com.example.joaopedrosilva.projectkotlin.main.MainActivity">
 
     <TextView
         android:id="@+id/welcomeMessage"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="25sp"
         android:textAlignment="center"
+        android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -37,11 +37,18 @@
             android:inputType="textPassword"/>
 
         <Button
+            android:id="@+id/buttonLogin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAllCaps="true"
             android:text="@string/login"
-            android:id="@+id/buttonLogin" />
+            android:textAllCaps="true" />
+
+        <Button
+            android:id="@+id/buttonFunctions"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/functions"
+            android:textAllCaps="true" />
     </LinearLayout>
 
 </LinearLayout>
