--- a/app/src/main/res/layout/fragment_wiki.xml
+++ b/app/src/main/res/layout/fragment_wiki.xml
@@ -1,24 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.joaopedrosilva.projectkotlin.main.SecondActivity">
+    android:padding="20dp">
 
-    <Button
-        android:id="@+id/buttonAddFrag"
+    <EditText
+        android:id="@+id/edit_search"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/addFrag" />
+        android:hint="@string/hint_search_string"
+        android:textAlignment="center" />
 
     <Button
-        android:id="@+id/buttonWiki"
+        android:id="@+id/btn_search"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/listFrag" />
-    <FrameLayout
-        android:id="@+id/contentFragment"
+        android:text="@string/button_search" />
+
+    <TextView
+        android:id="@+id/txt_search_result"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></FrameLayout>
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:textSize="24sp" />
+
 </LinearLayout>
