--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -17,8 +17,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/listFrag" />
+
+    <!--<FrameLayout-->
+        <!--android:id="@+id/contentFragment"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"></FrameLayout>-->
     <FrameLayout
         android:id="@+id/contentFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></FrameLayout>
+        android:layout_height="match_parent"/>
 </LinearLayout>
