--- a/app/src/main/res/layout/fragment_wiki.xml
+++ b/app/src/main/res/layout/fragment_wiki.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -25,4 +26,10 @@
         android:textAlignment="center"
         android:textSize="24sp" />
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/wikis_rv"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:clipToPadding="false"
+        tools:listitem="@layout/item_wiki" />
 </LinearLayout>
