--- a/app/src/main/res/layout/fragment_wiki.xml
+++ b/app/src/main/res/layout/fragment_wiki.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="20dp">
+    android:paddingLeft="20dp"
+    android:paddingRight="20dp">
 
     <EditText
         android:id="@+id/edit_search"
@@ -12,12 +13,6 @@
         android:layout_height="wrap_content"
         android:hint="@string/hint_search_string"
         android:textAlignment="center" />
-
-    <Button
-        android:id="@+id/btn_search"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/button_search" />
 
     <TextView
         android:id="@+id/txt_search_result"
