--- a/app/src/main/res/layout/item_wiki.xml
+++ b/app/src/main/res/layout/item_wiki.xml
@@ -1,41 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginBottom="2dp"
-    android:background="@drawable/relative_layout_background"
-    android:padding="16dp">
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                xmlns:tools="http://schemas.android.com/tools"
+                android:background="@drawable/relative_layout_background"
+                android:padding="16dp">
 
-    <LinearLayout
-        android:id="@+id/ll_title"
+    <TextView
+        android:id="@+id/title_tv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:weightSum="1">
+        tools:text="League of Legens League of Legens League of Legens League of Legens"
+        android:singleLine="true"
+        android:layout_toStartOf="@+id/date_tv"
+        android:textSize="20sp" />
 
-        <TextView
-            android:id="@+id/title_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.8"
-            android:textSize="20sp" />
-
-        <TextView
-            android:id="@+id/date_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.2"
-            android:textAlignment="textEnd" />
-    </LinearLayout>
+    <TextView
+        android:id="@+id/date_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        tools:text="10/2017"/>
 
     <TextView
         android:id="@+id/page_id_tv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/ll_title" />
+        android:layout_marginEnd="16dp"
+        android:singleLine="true"
+        android:ellipsize="end"
+        android:layout_below="@+id/title_tv"
+        tools:text="Page id: 3254454542342343242342343242342342342345"/>
 
     <TextView
         android:id="@+id/snippet_tv"
+        tools:text="dlfkjsdkfj kldsjfkl jsdlkfj dslkfjdlskjf lkdsjf kldsjflksdjf kldsjf kldsjflkdsj fklsdjfk jdsfklj dskfljsd lkfjsdklfj sdljf klsdjf kldsjfkl dsjf kldsjfkjsdfkljsdklf jsdklfj sdklfjdskl jfkdlsjf lkdsjfklsdjf lsçdjflkdsjfklçsdf"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/page_id_tv" />
